# SlicerHeadCTDeid

./: CMakeLists.txt  LICENSE  README.md  code.py  head_deid_cli.py
HeadCTDeid/: CMakeLists.txt  HeadCTDeid.py  HeadCTDeid.s4ext
HeadCTDeid/HeadCTDeidLib/: dependency_handler.py
HeadCTDeid/Resources/UI/: HeadCTDeid.ui
